--- a/src/GettingStartedApplication/WebService/bundleconfig.json
+++ b/src/GettingStartedApplication/WebService/bundleconfig.json
@@ -16,6 +16,7 @@
     // Optionally specify minification options
     "minify": {
       "enabled": true,
+      "enabled": false,
       "renameLocals": true
     },
     // Optinally generate .map file
