--- a/src/GettingStartedApplication/ActorBackendService.Interfaces/ActorBackendService.Interfaces.csproj
+++ b/src/GettingStartedApplication/ActorBackendService.Interfaces/ActorBackendService.Interfaces.csproj
@@ -38,7 +38,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
